--- a/index.css
+++ b/index.css
@@ -1,1 +1,19 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+			body {margin: 0; padding: 0; font-family: 'Source Code Pro', monospace; color: #000; background: #F0EDE6;}
+			h1 {font-size: 4em;}
+			.sup {
+     vertical-align: super;
+     margin-left: -1em;
+     padding: .21875em;
+     line-height: 100%;
+     font-size: .21875em;
+     border: #eee solid 1px;
+     border-radius: 4px;
+     color: inherit;
+ }
+ 
+ .sup:hover {
+     background: #eee;
+ }
+ 
