--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ h1 {font-size: max(50px, 6vw);}
 /* .wrap {overflow: hidden; height: 100%; position: relative; background-color: #222;} */
 .cursor {/*opacity: 0;*/ transition: opacity 0.3s; pointer-events: none; position: fixed; left: 0; right: 0; top: 0; bottom: 0; z-index: 100;}
 .cursor-inner {position: absolute;}
-.cursor .arrow {position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); background: url('/img/cur-hover.png') center/contain no-repeat; width: 50px; height: 50px;}
+.cursor .arrow {position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); font-size: 2vw; width: 50px; height: 50px;}
 .cursor .arrow:before {display: none; content: ''; position: absolute; right: 0; top: 50%; margin-top: -23px; transform: rotate(45deg); width: 30px; height: 30px; border-right: 15px solid #fff; border-top: 15px solid #fff;}
 
 .scrolling {position: fixed; background: #fff; z-index: 10; width: 100%;}
