--- a/reset.css
+++ b/reset.css
@@ -47,3 +47,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+@font-face {
+	font-family: "basic";
+	src: url("/font/basis-grotesque-medium-pro.woff2") format("woff2");
+	font-weight: 500;
+	font-style: normal;}
+  
