--- a/index.css
+++ b/index.css
@@ -10,10 +10,10 @@ html, body {
     height: 100%;
     cursor: none;
 }
-.main {
+/* .main {
     padding: 1.67vw;
     box-sizing: border-box;
-}
+} */
 h1 {font-size: max(50px, 6vw); /*font-size: clamp(1rem, 2.5vw, 2rem);*/}
 .sup {
     vertical-align: super;
@@ -48,3 +48,87 @@ h1 {font-size: max(50px, 6vw); /*font-size: clamp(1rem, 2.5vw, 2rem);*/}
     .scrolling-wrap {font-size: 75px;}
 }
 /* 텍스트 에니메이션 e */
+
+@font-face {
+    font-family: "Monument";
+    src: url("https://res.cloudinary.com/holatresveces/raw/upload/v1573001944/MonumentExtended-Ultrabold_clzvv7.otf");
+  }
+  
+  *,
+  *:before,
+  *:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html,
+  body {
+    height: 100%;
+  }
+  
+  
+  body {
+    font-family: "Monument";
+    font-size: 80px;
+    line-height: 70px;
+    background: #70b8ff;
+    overflow: hidden;
+  }
+  
+  .container {
+    position: relative;
+    height: 70px;
+    overflow: hidden;
+    outline: 1px transparent;
+  }
+  
+  ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    list-style: none;
+    white-space: nowrap;
+  }
+  
+  .menu {
+    color: transparent;
+    -webkit-text-stroke: 1px black;
+  }
+
+
+  .flex {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+
+.scene {
+	background-color: #a29bfe;
+	color: black;
+	font: 800 100%/1.2 'Nunito', sans-serif;
+	height: 100vh;
+	max-height: 100vh;
+	overflow: hidden;
+}
+
+.header {
+	font-size: 6rem;
+	margin: 0 auto;
+	max-width: 80em;
+	position: relative;
+	text-align: center;
+	z-index: 1;
+}
+
+.confetti {
+	position: absolute;
+	user-select: none;
+	z-index: 0;
+}
+
+.confetti__item {
+		display: inline-block;
+		font-size: 1.5rem;
+		position: absolute;
+}
