--- a/index.css
+++ b/index.css
@@ -140,3 +140,19 @@ h1 {font-size: max(50px, 6vw); /*font-size: clamp(1rem, 2.5vw, 2rem);*/}
 		font-size: 1.5rem;
 		position: absolute;
 }
+
+.ani {
+  width: 50px;
+  height: 50px;
+  transform: perspective(200px) rotateY(45deg);
+  animation: spin 0.2s ease-in 3s 8 both;
+}
+
+@keyframes spin {
+  0% {
+      transform: rotateY(0deg);
+  }
+  100% {
+      transform: rotateY(360deg);
+  }
+}
