--- a/reset.css
+++ b/reset.css
@@ -51,4 +51,7 @@ table {
 }
 *::selection {color:#fff; background:whitesmoke;}
 *::-moz-selection {color:#fff; background:whitesmoke;}
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
   
